Adjust metadata parser test